# swell

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  mission-verification-report.md  test_uuid
.cargo/: config.toml
.factory/: init.sh  services.yaml
.github/workflows/: ci.yml
.swell/: crates.json  memory.db  milestones.json  models.json  settings.json  validation.json
.swell/policies/: default.yaml
.swell/prompts/: doc_writer.md  evaluator.md  generator.md  planner.md  system-prompt.md
clients/swell-cli/: AGENTS.md  Cargo.toml
clients/swell-cli/src/: lib.rs  main.rs  repl.rs
clients/swell-cli/tests/: cross_daemon_ipc.rs  live_progress_streaming.rs  repl_slash_commands.rs
crates/swell-benchmark/: AGENTS.md  Cargo.toml
crates/swell-benchmark/src/: lib.rs  metrics.rs  runner.rs  task.rs
crates/swell-core/: AGENTS.md  Cargo.toml
crates/swell-core/src/: audit.rs  circuit_breaker.rs  config.rs  cost_tracking.rs  dependency_graph.rs  error.rs  events.rs  ids.rs  kill_switch.rs  langfuse.rs  lib.rs  llm_config.rs  opentelemetry.rs  session_compaction.rs  trace_waterfall.rs  tracing_json.rs  traits.rs  transcript.rs  treesitter.rs  types.rs  wiring.rs
crates/swell-core/tests/: config_audit_trail.rs  config_local_override.rs  config_section_merge.rs  newtype_serde.rs
crates/swell-daemon/: AGENTS.md  Cargo.toml
crates/swell-daemon/src/: commands.rs  dashboard.rs  error.rs  events.rs  lib.rs  main.rs  server.rs
crates/swell-daemon/tests/: error_round_trip.rs  socket_e2e.rs
crates/swell-integration-tests/: AGENTS.md  Cargo.toml
crates/swell-integration-tests/src/: lib.rs
crates/swell-integration-tests/tests/: full_cycle_wiring.rs  production_orchestrator_smoke.rs  prompt_integration_tests.rs
crates/swell-llm/: AGENTS.md  Cargo.toml
crates/swell-llm/src/: anthropic.rs  credential.rs  lib.rs  mock.rs  openai.rs  providers.rs  retry.rs  router.rs  traits.rs  wiring.rs
crates/swell-llm/tests/: cache_events.rs  minimax_live_tests.rs  otel_genai_conventions.rs
crates/swell-memory/: AGENTS.md  Cargo.toml
crates/swell-memory/src/: blocks.rs  conflict_resolution.rs  contrastive_learning.rs  cross_encoder_rerank.rs  decay.rs  deprecation.rs  embedding.rs  event_log.rs  golden_sample_testing.rs  knowledge_graph.rs  lancedb_vector.rs  learning_pipeline.rs  lib.rs  meta_cognitive.rs  operator_feedback.rs  pattern_learning.rs  post_session_learning.rs  procedural.rs  recall.rs  semantic.rs  skill_extraction.rs  staleness.rs  tiered_storage.rs  treesitter_extraction.rs  triple_stream.rs  version_rollback.rs  working_memory_compiler.rs
crates/swell-memory/tests/: repo_scoping.rs
crates/swell-orchestrator/: AGENTS.md  Cargo.toml
crates/swell-orchestrator/src/: agents.rs  alerts.rs  autonomy.rs  backlog.rs  builder.rs  checkpoint_wiring.rs  context_chunking.rs  context_pipeline.rs  cron_registry.rs  drift_detector.rs  evidence_pipeline.rs  execution.rs  failure_extraction_trigger.rs  feature_flag.rs  feature_leads.rs  file_locks.rs  followup_generator.rs  followup_proposer_trigger.rs  frozen_spec.rs  gap_analyzer.rs  git_commit_trigger.rs  hard_limits.rs  idempotent_actions.rs  killswitch.rs  langfuse_exporter.rs  lib.rs  loop_detection.rs  memory_write_trigger.rs  merge_queue.rs  metrics.rs  milestone_scheduler.rs  model_fallback.rs  non_novel_retry.rs  novelty_check.rs  policy.rs  proposal_queue.rs  recovery_recipe.rs  researcher_trigger.rs  retry_policy.rs  scheduler.rs  (+22 more)
crates/swell-orchestrator/tests/: concurrent_registry.rs  cross_config_cascade.rs  cross_cost_tracking.rs  cross_full_execution_path.rs  cross_memory_integration.rs  cross_permission_in_execution.rs  cross_recovery_flow.rs  doom_loop_reset.rs  drift_detection.rs  interactive_approval.rs  langfuse_integration.rs  mcp_tool_execution.rs  sprint_contracts.rs  task_interruption.rs  uncertainty_pauses.rs
crates/swell-sandbox/: AGENTS.md  Cargo.toml
crates/swell-sandbox/src/: firecracker.rs  gvisor.rs  lib.rs  os_sandbox.rs
crates/swell-skills/: AGENTS.md  Cargo.toml
crates/swell-skills/src/: catalog.rs  error.rs  lib.rs  loader.rs  types.rs
crates/swell-state/: AGENTS.md  Cargo.toml
crates/swell-state/src/: checkpoint_manager.rs  lib.rs  manager.rs  postgres.rs  session.rs  sqlite.rs  task_state_file.rs  wiring.rs  workspace_fingerprint.rs
crates/swell-state/src/traits/: in_memory.rs
crates/swell-tools/: AGENTS.md  Cargo.toml
crates/swell-tools/src/: auto_masking.rs  branch_strategy.rs  cedar_policy.rs  commit_strategy.rs  conflict_resolution.rs  credential_proxy.rs  egress.rs  executor.rs  file_guardrails.rs  hooks.rs  hybrid.rs  killswitch.rs  lib.rs  loop_detection.rs  mcp.rs  mcp_config.rs  mcp_lsp.rs  opa_policy.rs  os_sandbox.rs  permissions.rs  post_tool_hooks.rs  pr_creation.rs  pre_tool_hooks.rs  registry.rs  resource_limits.rs  sandbox_router.rs  secret_scanning.rs  self_healing_ci.rs  skill.rs  tools.rs  trust_policy.rs  vault.rs  web_search.rs  wiring.rs  worktree_isolation.rs  worktree_pool.rs
crates/swell-tools/tests/: lsp_registry_and_tools.rs  mcp_degraded_startup.rs  mcp_failure_classification.rs  mcp_lifecycle_phases.rs  mcp_plugin_state_machine.rs  mcp_tool_naming.rs  trust_resolution.rs
crates/swell-validation/: AGENTS.md  Cargo.toml
crates/swell-validation/src/: autonomous_coverage.rs  calibrated_confidence.rs  confidence.rs  evidence.rs  flakiness.rs  lib.rs  multi_agent_test_roles.rs  multi_signal.rs  mutation_test_gate.rs  orchestrator.rs  predictive_selection.rs  result_interpreter.rs  self_improving_tests.rs  staged_executor.rs  test_generator.rs  test_planning.rs  traceability.rs
docs/: daemon-api.md  minimax-m2.7-shakedown.md
plan/: Autonomous Coding Engine.md
plan/audit-2026-04-13/: 00_audit.md
plan/claw_code_analysis/: anthropic-auth-shapes.md  builder-lessons-from-mechanisms.md  clawable-harness-principles.md  cli-vs-slash-surfaces.md  compaction-parity-evidence.md  compaction-resume-packet.md  compaction-trigger-tail.md  config-merged-sections.md  config-precedence-order.md  (+44 more)
scripts/: smoke_test.sh
(+566 files in other folders)
