[workspace]
resolver = "2"
members = [
    "crates/swell-core",
    "crates/swell-orchestrator",
    "crates/swell-memory",
    "crates/swell-tools",
    "crates/swell-sandbox",
    "crates/swell-validation",
    "crates/swell-daemon",
    "clients/swell-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Factory"]
license = "MIT"
repository = "https://github.com/factory/swell"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Dev dependencies
tempfile = "3"
