[workspace]
resolver = "2"
members = [
    "crates/swell-core",
    "crates/swell-llm",
    "crates/swell-state",
    "crates/swell-memory",
    "crates/swell-tools",
    "crates/swell-sandbox",
    "crates/swell-validation",
    "crates/swell-orchestrator",
    "crates/swell-daemon",
    "crates/swell-skills",
    "crates/swell-benchmark",
    "crates/swell-integration-tests",
    "clients/swell-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
authors = ["Factory"]
license = "MIT"
repository = "https://github.com/factory/swell"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }

# Authentication
sha2 = "0.10"
base64 = "0.22"

# Async streams
futures = "0.3"
futures-util = "0.3"

# Date/time parsing
time = { version = "0.3", features = ["parsing", "serde"] }

# Regex
regex = "1"

# Glob pattern matching
glob = "0.3"

# Which (for finding executables)
which = "6"

# Concurrent hash map for fine-grained task locking
dashmap = "5"

# Cron expression parsing
croner = "1"

# Dev dependencies
tempfile = "3"
tokio-test = "0.4"
mockall = "0.13"

[profile.dev]
# Emit line tables only for workspace crates (equivalent to -g1).
# Reduces binary size and speeds up ld64 re-linking on every incremental build.
# Backtraces still show file:line; lldb variable inspection is degraded (fine for CI/agents).
debug = "line-tables-only"

[profile.dev.package."*"]
# External dependencies never need debug info — you won't step through tokio internals.
# Eliminates debug sections from all downloaded crates → smaller binary, faster cold links.
debug = 0

[profile.release]
# Thin LTO: better codegen than none, much faster than full LTO.
lto = "thin"
# Single codegen unit for maximum optimization (accepts slower release compile).
codegen-units = 1
# Strip symbol table from release binaries — smaller deployable, not needed at runtime.
strip = "symbols"
