[package]
name = "swell-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "swell"
path = "src/main.rs"

[lib]
name = "swell_cli"
path = "src/lib.rs"

[dependencies]
swell-core = { path = "../../crates/swell-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
