[package]
name = "swell-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "swell"
path = "src/main.rs"

[lib]
name = "swell_cli"
path = "src/lib.rs"

[dependencies]
swell-core = { path = "../../crates/swell-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true

[dev-dependencies]
swell-daemon = { path = "../../crates/swell-daemon" }
swell-orchestrator = { path = "../../crates/swell-orchestrator" }
swell-llm = { path = "../../crates/swell-llm" }
swell-tools = { path = "../../crates/swell-tools" }
swell-validation = { path = "../../crates/swell-validation" }
swell-state = { path = "../../crates/swell-state" }
tempfile.workspace = true
