[package]
name = "swell-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
tokio-test.workspace = true
