[package]
name = "swell-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true

# OpenTelemetry for GenAI observability
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", optional = true }
tracing-opentelemetry = "0.28"

# Hashing for audit trail
sha2.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
