[package]
name = "swell-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true

# OpenTelemetry for GenAI observability
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", optional = true }
tracing-opentelemetry = "0.28"

# TLS and HTTP/2 for OTLP
tonic = { version = "0.12", optional = true }
url = { version = "2", optional = true }

# Hashing for audit trail
sha2.workspace = true

# Langfuse integration
reqwest = { workspace = true, features = ["json", "rustls-tls"], default-features = false }
base64.workspace = true

# Redis client for kill switch
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Tree-sitter for AST parsing and code analysis
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

[features]
default = []
opentelemetry-full = [
    "opentelemetry-otlp/grpc-tonic",
    "tonic",
    "url",
]

[dev-dependencies]
# Tree-sitter highlighting (used for testing)
tree-sitter-highlight = "0.24"
tokio-test.workspace = true
tempfile.workspace = true
