[package]
name = "swell-integration-tests"
version.workspace = true
edition.workspace = true

[[test]]
name = "prompt_integration_tests"
path = "tests/prompt_integration_tests.rs"

[dependencies]
swell-core = { path = "../swell-core" }
swell-llm = { path = "../swell-llm" }
swell-validation = { path = "../swell-validation" }
uuid.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio-test.workspace = true
