[package]
name = "swell-llm"
version.workspace = true
edition.workspace = true

[dependencies]
swell-core = { path = "../swell-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
