[package]
name = "swell-llm"
version.workspace = true
edition.workspace = true

[dependencies]
swell-core = { path = "../swell-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["stream", "json", "rustls-tls"], default-features = false }
async-trait.workspace = true
futures.workspace = true
futures-util.workspace = true
tracing.workspace = true

# Community Anthropic Rust SDK — backs AnthropicBackend.
anthropic-client = { git = "https://github.com/LudwigAJ/community-anthropic-sdk-rust", branch = "main" }
anthropic-types = { git = "https://github.com/LudwigAJ/community-anthropic-sdk-rust", branch = "main" }
chrono.workspace = true
uuid.workspace = true

# OpenTelemetry for GenAI observability
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
mockito = "1"
