[package]
name = "swell-memory"
version.workspace = true
edition.workspace = true

[dependencies]
swell-core = { path = "../swell-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
async-trait.workspace = true
reqwest.workspace = true

# Vector database
lancedb.workspace = true

# Arrow for data manipulation (from lancedb dependency)
arrow-array = "57"
arrow-schema = "57"

# Async stream utilities
futures = "0.3"

# Tree-sitter for AST parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"

[dev-dependencies]
tempfile.workspace = true
mockito.workspace = true
rand = "0.8"
