[package]
name = "swell-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
swell-core = { path = "../swell-core" }
swell-llm = { path = "../swell-llm" }
swell-state = { path = "../swell-state" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
