[package]
name = "swell-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
swell-core = { path = "../swell-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
