[package]
name = "swell-skills"
description = "Agent Skills loader following agentskills.io standard"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
swell-core = { path = "../swell-core", version = "0.1.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Async
tokio = { version = "1", features = ["fs", "sync"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "1"

# Glob for file pattern matching
glob = "0.3"

# Home directory access
dirs = "6"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[features]
default = []
