[package]
name = "swell-state"
version.workspace = true
edition.workspace = true

[dependencies]
swell-core = { path = "../swell-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid", "chrono", "migrate"] }
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
