[package]
name = "swell-tools"
version.workspace = true
edition.workspace = true

[dependencies]
swell-core = { path = "../swell-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
glob.workspace = true
regex.workspace = true
tempfile.workspace = true
which.workspace = true
urlencoding = "2.1"
url = "2.5"

# Cedar policy engine for formally verifiable authorization
cedar-policy = "4"
cedar-policy-core = "4"

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
