[package]
name = "swell-validation"
version.workspace = true
edition.workspace = true

[dependencies]
swell-core = { path = "../swell-core" }
swell-llm = { path = "../swell-llm" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true
which = "6"
itertools = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
